Fixed UI iussues on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media only screen and (max-width: 760px),
+@media only screen and (max-width: 1024px),
   (min-device-width: 768px) and (max-device-width: 1024px) {
   table,
   thead,
@@ -55,15 +55,15 @@ body {
     content: "";
   }
   td:nth-of-type(2):before {
-    content: "Current Temperature:";
+    content: "Temperature:";
   }
   td:nth-of-type(3):before {
     content: "Description:";
   }
   td:nth-of-type(4):before {
-    content: "Current Pressure:";
+    content: "Pressure:";
   }
   td:nth-of-type(5):before {
-    content: "Current Humidity:";
+    content: "Humidity:";
   }
 }
